<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:gravity="center_vertical"

    android:orientation="vertical"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fab_submit_post"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/Pond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pond" />

        <RadioButton
            android:id="@+id/Cage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cage" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textInputLayout8"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/pond_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/fish_type"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/fish_type"
              android:ems="10"
            android:gravity="start"
            android:hint="@string/size"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/textInputLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/pond_stock"
            android:layout_width="wrap_content"
android:inputType="number"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pond_size"
            android:layout_alignStart="@+id/pond_size"
            android:layout_below="@+id/pond_size"
            android:ems="10"
            android:hint="@string/stock" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/textInputLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/fish_size"
            android:layout_width="wrap_content"
android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pond_stock"
            android:layout_alignStart="@+id/pond_stock"
android:gravity="start"
            android:layout_below="@+id/pond_stock"
            android:ems="10"
            android:hint="@string/fish_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/textInputLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/fish_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fish_size"
            android:layout_toLeftOf="@+id/fab_submit_post"
            android:layout_toStartOf="@+id/fab_submit_post"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/fish_type"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"

        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_weight="0.05"
        android:src="@mipmap/check"
        app:rippleColor="@color/black" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/textInputLayout9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/pond_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/pond_size"
            android:layout_alignLeft="@+id/pond_size"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/pond_size"
            android:layout_alignStart="@+id/pond_size"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/pond_reference"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textInputLayout3"
        android:layout_above="@+id/fish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0.57"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/location"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textInputLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_pond_cage"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>

