<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/pad_10dp"
    android:paddingBottom="@dimen/pad_10dp"
    android:paddingLeft="@dimen/pad_10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="1">

        <EditText
            android:id="@+id/editfull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/editphone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/editphone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_2"

            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/homelocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonNewArtist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/isave"
            android:elevation="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


    </LinearLayout>
</LinearLayout>