<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ent.josdav.adefault.ubuntu.josdaventerprises.FAQActivity">
    <com.github.aakira.expandablelayout.ExpandableRelativeLayout

        android:id="@+id/expandableLayout29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="linear"
        app:ael_orientation="vertical"
      >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_faq"
            android:inputType="textCapSentences"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
</android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonAddArtist"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:textColor="#000"
            android:layout_below="@+id/textInputLayout20"
            android:background="@color/btn_login"
            android:text="@string/post_question"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
</com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <Button
        android:id="@+id/expandableButton18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expandableLayout29"

        android:background="@color/colorPrimary"
        android:drawableEnd="@android:drawable/arrow_down_float"

        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton18"
        android:text="@string/ask_a_question"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_below="@id/expandableButton18"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/faqs"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="Tap on a Faq to view Answers"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/listViewArtists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_below="@+id/textView1" />
</RelativeLayout>
