<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_artist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ent.josdav.adefault.ubuntu.josdaventerprises.FAQActivity">

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout

        android:id="@+id/expandableLayout27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:ael_duration="400"
        android:layout_below="@+id/textViewArtist"
        app:ael_expanded="false"
        app:ael_interpolator="linear"
        app:ael_orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout987"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewArtist"
                android:hint="@string/give_an_answer"
                android:inputType="textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonAddTrack"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout987"
            android:background="@color/black"
            android:elevation="5dp"
            android:paddingBottom="@dimen/pad_5dp"
            android:text="@string/post"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#000" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
    <Button
        android:id="@+id/expandableButton17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableEnd="@android:drawable/arrow_down_float"

        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="expandableButton17"
        android:text="@string/give_answer"
        android:textColor="#000"
        android:layout_below="@+id/expandableLayout27"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expandableButton17"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/answers_provided"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <ListView
        android:id="@+id/listViewTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView" />

</RelativeLayout>
